# speedsys-rs

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  Makefile  PHASE_4_PLAN.md  PHASE_6_PLAN.md  PHASE_8_TESTING.md  PHASE_9_PLAN.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/diagrams/: architecture.dot  data_flow.dot  disk_benchmark_pipeline.dot  roadmap.dot  state_machine.dot  troubleshooting.dot
scripts/: render_diagrams.sh  render_screenshots.sh
src/: app.rs  cli.rs  history.rs  main.rs  report.rs  sysinfo.rs  worker.rs
src/bench/: cpu.rs  disk.rs  mem.rs  mod.rs  thermal.rs
src/ui/: common.rs  disks.rs  mod.rs  overview.rs
tests/: integration_tests.rs
