[workspace]

[package]
name = "speedsys-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
rand = "0.8"
libc = "0.2"
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
